...
      <BodyWrapper>
        <Amount style={{marginHorizontal: 20}} />
        <Note />
        <NumPad />
      </BodyWrapper>
      <BtnsWrapper>
        <PrimaryButton btnText="Next" onPress={onCreateInvoice} />
        <SecondaryButton
          icon={'arrow-rotate-left'}
          btnText="Clear"
          btnStyle={{marginTop: 10}}
          onPress={() => dispatch(updateAmount('clearInput'))}
        />
...
