...
            iconColor="#002118"
            textStyle={printButtonTextStyle}
            btnStyle={printButtonStyle}
            onPress={onPrint}
          />
          <SecondaryButton
            btnText="Done"
            iconColor="#fff"
            textStyle={doneButtonTextStyle}
            btnStyle={doneButtonStyle}
            onPress={onDone}
          />
        </BtnsWrapper>
...
