...
}

const initialState: AmountSlice = {
  currency: {
    flag: '🇯🇲',
    fractionDigits: 2,
    id: 'JMD',
    name: 'Jamaican Dollar',
    symbol: 'J$',
  },
  isPrimaryAmountSats: false,
  displayAmount: undefined,
  satAmount: undefined,
...
