...
          hideSecondary={true}
        />
        {Platform.OS === 'ios' && (
          <CardBalanceRow>
            <TextButton
              icon="credit-card"
              title="Card balance"
              disabled={readingCard}
              onPress={readCardBalance}
            />
          </CardBalanceRow>
        )}
        <Note />
...
